<resources>
    <!--<string name="app_name">ידידים</string>-->
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="first_login">התחברות ראשונית</string>
    <string name="main_page">עמוד ראשי</string>
    <string name="welcome">ברוכים הבאים!</string>
    <string name="first_login_message">
        לצורך זיהוי ואישור המערכת תשלח לך הודעה אשר תכיל קוד בעל 6 ספרות. אנא הכנס את מספר הפלאפון שלך וודא כי הוא תקין על מנת לקבל את הקוד ולהיכנס למערכת.
    </string>
    <string name="first_code_title">אימות קוד ראשוני</string>
    <string name="first_code_hint">הכנס קוד ראשוני</string>
    <string name="first_code_check">בצע אימות</string>
    <string name="phone_number">מס\' פלאפון</string>
    <string name="enter_phone_number">הקלד את מספר הנייד שלך</string>
    <string name="verify_code">אישור קוד</string>

    <!--this belongs to the personal information activity-->
    <string name="personal_information_title">טופס מילוי פרטים אישיים</string>
    <string name="full_name_text">שם מלא</string>
    <string name="full_name_input">הכנס שם מלא</string>
    <string name="active_number_text">מספר כונן</string>
    <string name="active_number_input">הכנס מספר כונן</string>
    <string name="id_text">תעודת זהות</string>
    <string name="id_input">הכנס תעודת זהות</string>
    <string name="birthdate_text">תאריך לידה</string>
    <string name="birthdate_input">הכנס תאריך לידה</string>
    <string name="profession_text">מקצוע</string>
    <string name="profession_input">הכנס מקצוע</string>
    <string name="qualification_text">הכשרה</string>
    <string name="qualification_input">הכנס הכשרה</string>
    <string name="city_text">עיר</string>
    <string name="city_input">הכנס עיר</string>
    <string name="neighborhood_text">שכונה</string>
    <string name="neighborhood_input">הכנס שכונה</string>
    <string name="street_text">רחוב</string>
    <string name="street_input">הכנס שם רחוב</string>
    <string name="apartment_text">מס\' דירה</string>
    <string name="apartment_input">הכנס מס\' דירה</string>
    <string name="building_text">מס\' רחוב</string>
    <string name="building_input">הכנס מס\' רחוב</string>
    <string name="phone_text">פלאפון</string>
    <string name="phone_input">הכנס פלאפון</string>
    <string name="mail_text">אי-מייל</string>
    <string name="mail_input">הכנס אי-מייל</string>
    <string name="car_type_text">סוג רכב</string>
    <string name="car_type_input">הכנס סוג רכב</string>
    <string name="car_company_text">חברת רכב</string>
    <string name="car_company_input">הכנס חברת רכב</string>
    <string name="car_model_text">דגם רכב</string>
    <string name="car_model_input">הכנס דגם רכב</string>
    <string name="car_license_plate_text">לוחית זיהוי</string>
    <string name="car_license_plate_input">הכנס לוחית זיהוי</string>
    <string name="available_equipment_text">ציוד שברשותך</string>
    <string name="available_equipment_input">הכנס ציוד שברשותך</string>
    <string name="save_personal_information_data">שמירת נתונים</string>


    <string name="preference_file_key">com.example.yedidim.preferenceFile</string>
    <string name="preference_file_personal_information_key">com.example.yedidim.preferenceFilePersonalInformation</string>
    <string name="first_page_variable">isFirstTime</string>
    <string name="main_page_id">main_page_id</string>
    <string name="personal_information_id">personal_information_id</string>
    <string name="title_nav_val_page">מסך מתנדב</string>
    <string name="title_nav_personal_information">פרטים אישיים</string>
    <string name="title_nav_settings">הגדרות</string>
    <string name="title_nav_about_us">אודותינו</string>
    <string name="title_nav_about_startach">אודות סטארט-אח</string>
    <string name="title_nav_dispatchers">מוקדנים</string>
    <string name="title_nav_developers">על המפתחים</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="send_code_again_text"><a href="">שלח קוד אישי פעם נוספת</a></string>
    <string name="permission_read_phone_state">בקשת הרשאה לקריאת מספר המכשיר</string>
    <string name="permissions_not_granted_read_phone">לא ניתנה הרשאה לקריאת מספר המכשיר</string>
    <string name="invalide_number">הזנת מספר לא תקין אנא נסה שוב</string>
    <string name="server_access_error">שגיאה גישה לשרת!!</string>
    <string name="aboutus">ארגון מתנדבים בפריסה ארצית ממטולה ועד אילת, הארגון מספק כל עזרה ראשונה שאינה רפואית ללא הבדל דת, גזע, ומין, וללא כל תמורה, במשך 24 שעות ביממה. 6 ימים בשבוע חשיבותו של הארגון מתבטאת במקרים בהם אנשי מקצוע או כלים מתאימים אינם בנמצא.</string>
    <string name="day_default">day default</string>
    <string name="Send">שליחה</string>
    <string name="code_recieved">קוד שהתקבל בהודעה</string>
    <string name="resend_sms">לא קיבלתי מסרון, שלח מסרון חדש</string>
    <string name="enter_code">הזן קוד בן 6 ספרות שתקבל כעת במסרון</string>
    <string name="unknown_phone_number">אנחנו לא מזהים אותך במאגר, אנא בדוק שהמספר שהזנת תקין</string>


    <string-array name="days_array">
        <item>יום ראשון</item>
        <item>יום שני</item>
        <item>יום שלישי</item>
        <item>יום רביעי</item>
        <item>יום חמישי</item>
    </string-array>
    <string name="title_activity_event_info">EventInfoActivity</string>
    <string name="notif_new_event">אירוע חדש </string>
    <string name="notif_event_title">סוג אירוע - %s, רכב - %s </string>
    <string name="Logout">התנתקות</string>
    <string name="event_info_title_event">האירוע:</string>
    <string name="event_info_title">פרטי האירוע</string>
    <string name="event_info_details_title">פרטים נוספים:</string>
    <string name="event_info_cancel_event">בטל אירוע</string>
    <string name="event_info_take_event">קח אירוע</string>
    <string name="event_info_navigate">נווט למיקום המשוער</string>
    <string name="event_info_loctaion">מיקום:</string>
    <string name="event_info_title_name">שם:</string>
    <string name="event_info_phone">טלפון:</string>
    <string name="event_info_car_type">סוג רכב:</string>
    <string name="event_info_call">התקשר לאדם התקוע</string>
    <string name="event_info_event_taken_title">האירוע נלקח</string>
    <string name="event_info_event_taken_message">לצערנו, מתנדב אחר לקח את הקריאה\nקבל טפיחה על השכם על הרצון הטוב</string>
    <string name="event_info_take_event_title">אישור</string>
    <string name="event_info_take_event_message">האם ברצונך לקחת את הקריאה?</string>
    <string name="dialog_close">סגור</string>
    <string name="event_info_close_event">סיים אירוע</string>
    <string name="event_info_ignore_event">מחק אירוע</string>
    <string name="event_info_close_event_error">לא ניתן לסיים אירוע, אנא נסה שנית</string>
    <string name="event_info_take_event_error">אירעה שגיאה, לא ניתן לקחת אירוע</string>
    <string name="title_events">אירועים</string>
    <string name="event_info_close_title">סיום אירוע</string>
    <string name="event_info_close_message">האירוע הסתיים בהצלחה</string>
    <string name="event_info_cance_title">ביטול קריאה</string>
    <string name="event_info_cancel_message">אני רוצה לבטל את הקריאה</string>
    <string name="event_info_ignore_title">ביטול</string>
    <string name="event_info_ignore_message">אינני מעוניין לקחת את הקריאה</string>
    <string name="event_info_error_msg">לא ניתן לבצע את הפעולה</string>
    <string name="error_no_volunteer_found_title">שגיאה</string>
    <string name="error_no_volunteer_found_message">אירעה שגיאה בטעינת הפרטים, אנא פנה לתמיכה</string>
    <string-array name="event_cases">
        <item>כבלים</item>
        <item>פנצ\'ר</item>
        <item>קומפרסור</item>
        <item>דלת נעולה</item>
        <item>שמן\\מים\\דלק</item>
        <item>חילוץ</item>
        <item>קודנית</item>
        <item>פנצ\'ר (אין רזרבי)</item>
        <item>אחר</item>
        <item>רכב נעול</item>
    </string-array>
</resources>
