<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_val_screen"
            android:icon="@drawable/ic_call"
            android:title="@string/title_nav_val_page" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/title_events" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_info"
            android:title="@string/title_nav_about_us" />
        <item
            android:id="@+id/nav_about_startach"
            android:icon="@drawable/ic_info"
            android:title="@string/title_nav_about_startach" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/title_nav_settings" />
        <!--<item-->
            <!--android:id="@+id/nav_developers"-->
            <!--android:icon="@drawable/ic_developer_mode"-->
            <!--android:title="@string/title_nav_developers" />-->

    </group>

</menu>
