<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.startach.yedidim.Activity.VerifyCodeActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/verify_pass_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_code_title"
        android:textSize="30dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/verify_password"
        app:layout_constraintVertical_bias="0.908"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/verify_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/first_code_hint"
        android:inputType="numberPassword"
        android:layout_marginBottom="27dp"
        app:layout_constraintBottom_toTopOf="@+id/check_password"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/check_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_code_check"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="27dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="58dp"
        app:layout_constraintBottom_toTopOf="@+id/sendAgainVerifyCode" />

    <TextView
        android:id="@+id/sendAgainVerifyCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_code_again_text"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="199dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>