<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e2e2e2"
    android:orientation="vertical"
    tools:context="com.startach.yedidim.LoginActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/welcome"
        android:textColor="#000"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/firstLogin"
        android:layout_width="match_parent"
        android:layout_height="119dp"
        android:layout_margin="8dp"
        android:text="@string/first_login_message"
        android:textColor="#000"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/phoneField"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:text="" />

        <Button
            android:id="@+id/send_sms_button"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/Send" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/code_field_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/codeField"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:text="" />

        <Button
            android:id="@+id/send_code_button"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/Send" />

    </LinearLayout>


</LinearLayout>
